--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.16.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-test-renderer": "17.0.2",
     "react-use": "17.2.4",
     "typeface-roboto": "1.1.13",
